--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,9 @@
   --tw-shadow: 0 1px 2px 0 var(--tw-shadow-color, #0000000d);
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
 }
+/* .stopScrollingBody{
+  overflow: hidden;
+} */
 .bg-input-background {
   background-color: #f3f3f5;
 }
